--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="referrer" content="no-referrer" />
-    <title>後台家具電商</title>
+    <title>MOMO 後台家具電商</title>
     <link rel="shortcut icon" href="" />
     <link rel="bookmark" href="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -35,7 +35,7 @@
 
     <nav class="topBar">
       <div class="wrap">
-        <h1><a href="#" class="logo">WOWOROOM</a></h1>
+        <h1><a href="#" class="logo">MOMO</a></h1>
         <span class="material-icons menuToggle"> menu </span>
         <ul class="topBar-menu">
           <li><a href="#">後台管理</a></li>
