--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="referrer" content="no-referrer" />
-    <title>前台家具電商</title>
+    <title>MOMO 前台家具電商</title>
     <link rel="shortcut icon" href="" />
     <link rel="bookmark" href="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -34,7 +34,7 @@
   <body>
     <nav class="topBar">
       <div class="wrap">
-        <h1><a href="#" class="logo">WOWOROOM</a></h1>
+        <h1><a href="#" class="logo">MOMO 家具</a></h1>
         <span class="material-icons menuToggle"> menu </span>
         <ul class="topBar-menu">
           <li><a href="#bedAdvantage">床墊優勢</a></li>
@@ -47,7 +47,7 @@
     </nav>
     <section class="wrap" id="bedAdvantage">
       <div class="banner">
-        <h2 class="banner-text">窩窩家居<br />跟您一起品味生活</h2>
+        <h2 class="banner-text">MOMO 家具<br />跟您一起品味生活</h2>
       </div>
       <h3 class="section-title">床墊優勢</h3>
       <ul class="bedAdvantage">
@@ -85,7 +85,7 @@
             <thead>
               <tr>
                 <th></th>
-                <th>窩窩系統模組家具</th>
+                <th>MOMO 系統模組家具</th>
                 <th class="text-muted">組合式家具</th>
                 <th class="text-muted">實木家具</th>
               </tr>
@@ -135,7 +135,7 @@
                 <div class="recommend-img">
                   <img src="https://i.imgur.com/I9L7WOr.png" alt="" />
                   <div>
-                    <p>王六角</p>
+                    <p>王小明</p>
                     <p class="recommend-text">Jodan 雙人床架</p>
                   </div>
                 </div>
